clusters/vps/infrastructure/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
  - hosts:
    - argo.nasson.co.za
    secretName: nasson-wildcard-tls # K3s can sometimes resolve this if it's in kube-system
  rules:
  - host: argo.nasson.co.za
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
